--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,9 @@
         "48": "/assets/logo48.png",
        "128": "/assets/logo128.png"
     },
+    "permissions": [
+        "*://*/*"
+    ],
     "background": {
         "scripts": [
             "background.js"
