--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,7 @@
         "/assets/star.png",
         "/assets/backgroundStar.png",
         "/assets/player.png",
-        "/assets/bomb.png",
+        "/assets/asteroid.png",
         "/assets/logoOn.png",
         "/assets/logoOff.png"
     ],
